--- a/网络和协议/计算机网络.md
+++ b/网络和协议/计算机网络.md
@@ -28,3 +28,9 @@ PON：被动光纤网络
 
 分组：当一台端系统要向另一台端系统发送数据时，发送端系统将数据分段，并加上首部字节所形成的信息包。
 
+存储转发传输：是指在交换机能够开始向输出链路传输该分组的第一个比特之前，必须接受到整个分组。
+
+FDM：频分复用
+
+TDM：时分复用
+
