--- a/网络和协议/计算机网络.md
+++ b/网络和协议/计算机网络.md
@@ -34,3 +34,13 @@ FDM：频分复用
 
 TDM：时分复用
 
+协议栈：各层所有的协议，包括5个层次物理层、链路层、网络层、运输层、应用层（应用层、表示层、会话层）
+
+报文：一个端系统中的应用程序使用协议与另一个端系统中的应用程序交换信息分组称之为报文
+
+报文段：报文段就是运输层的分组
+
+数据报：网络层分组
+
+帧：链路层分组
+
