--- a/网络和协议/计算机网络.md
+++ b/网络和协议/计算机网络.md
@@ -1,8 +1,10 @@
 # 计算机网络(一)
 
-#### 1. 术语 
+#### 一、术语 
 
 ISP： 因特网服务提供商(较低层次的通过较高层次互联起来)
+
+IXP：因特网交换点
 
 TCP：传输控制协议
 
@@ -44,3 +46,6 @@ TDM：时分复用
 
 帧：链路层分组
 
+
+
+#### 二、 应用层
